@@ -54,5 +54,5 @@
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
-	</dependencies>
+    </dependencies>
 </project>
